--- a/public/home.html
+++ b/public/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script> <!-- for cashfree Payment -->
+    <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
 
 </head>
 <body>
@@ -44,8 +44,10 @@
         </ul>
     </div>
       
-    <div id ="leaderBtn"></div>
+     <div id ="leaderBtn"></div>
      <ul id="leaderboard"></ul>
+
+     <div id= "reportDiv"></div>
 
 
  
