--- a/public/report.html
+++ b/public/report.html
@@ -1,24 +1,56 @@
-<h2>Your Salary: <span id="salaryValue"></span></h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Expense Report</title>
+  <style>
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid #000;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background: #f2f2f2;
+    }
+  </style>
+</head>
+<body>
+  <select id="filterSelect">
+    <option value="daily">Daily</option>
+    <option value="weekly">Weekly</option>
+    <option value="monthly">Monthly</option>
+  </select>
 
-<select id="filterSelect">
-  <option value="daily">Daily</option>
-  <option value="weekly">Weekly</option>
-  <option value="monthly">Monthly</option>
-</select>
+  <button id="generateReportBtn">Generate Report</button>
+  <button id="downloadBtn">Download CSV</button>
 
-<button id="generateReportBtn">Generate Report</button>
-<button id="downloadBtn">Download CSV</button>
+  <!-- Monthly Summary -->
+  <div id="monthlySummary"></div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Amount</th>
-      <th>Category</th>
-      <th>Date</th>
-    </tr>
-  </thead>
-  <tbody id="reportTableBody"></tbody>
-</table>
+  <table>
+    <thead>
+      <tr>
+        <th>Amount</th>
+        <th>Description</th>
+        <th>Category</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody id="reportTableBody"></tbody>
+  </table>
 
-<script src="report.js"></script>
+  <!-- Pagination controls -->
+  <div>
+    <button id="prevPageBtn">Prev</button>
+    <span id="pageIndicator"></span>
+    <button id="nextPageBtn">Next</button>
+  </div>
+
+  <script src="JS/report.js"></script>
+</body>
+</html>
