--- a/public/report.html
+++ b/public/report.html
@@ -29,8 +29,16 @@
   <button id="generateReportBtn">Generate Report</button>
   <button id="downloadBtn">Download CSV</button>
 
+   <label for="rowsPerPage">Rows per page:</label>
+   <select id="rowsPerPage">
+    <option value="10">10</option>
+    <option value="20">20</option>
+    <option value="40">40</option>
+  </select>
+
   <!-- Monthly Summary -->
   <div id="monthlySummary"></div>
+
 
   <table>
     <thead>
