--- a/public/report.html
+++ b/public/report.html
@@ -59,6 +59,8 @@
     <button id="nextPageBtn">Next</button>
   </div>
 
+
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="JS/report.js"></script>
 </body>
 </html>
