--- a/public/home.html
+++ b/public/home.html
@@ -57,6 +57,8 @@
 
   <div id="reportDiv"></div>
 
+
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./JS/home.js"></script>
 </body>
 </html>
