--- a/public/login.html
+++ b/public/login.html
@@ -22,6 +22,10 @@
 
     <button id="forgotPasswordBtn" type="button">Forgot Password?</button>
 
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="../JS/login.js"></script>
 </body>
 </html>
