--- a/public/signup.html
+++ b/public/signup.html
@@ -25,6 +25,8 @@
 
     <a href="login.html">Already have account-- Login</a>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../JS/signup.js"></script>
     
 </body>
