--- a/public/signup.html
+++ b/public/signup.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/login&signup.css">
 </head>
 <body>
 
-    <form onsubmit="signup(event)">
-        
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="name">
 
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="email">
+<form onsubmit="signup(event)">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" placeholder="Name">
 
-        <label for="password">Password</label>
-        <input type="password" id="password"  name="password" placeholder="password">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Email">
 
+    <label for="password">Password</label>
+    <input type="password" id="password"  name="password" placeholder="Password">
 
-        <button>signup</button>
+    <button>Signup</button>
 
+    <div class="form-footer">
+        <a href="login.html">Already have an account? Login</a>
+    </div>
+</form>
 
-    </form>
-
-    <a href="login.html">Already have account-- Login</a>
 
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
