--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker Leaderboard</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Expense Tracker - Leaderboard</title>
+  <link rel="stylesheet" href="./CSS/leaderboard.css"> <!-- Reuse same CSS -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <h1>Global Expense Leaderboard</h1>
-    <a href="home.html">Go back to Home</a>
-    
-    <hr>
 
-    <h3>Top Users by Total Expense</h3>
-    <ul id="leaderboardList">
-        <li>Loading leaderboard...</li>
+
+  <main class="leaderboard-container">
+    <h2>Global Expense Leaderboard</h2>
+    <ul id="leaderboardList" class="leaderboard-list">
+      <li>Loading leaderboard...</li>
     </ul>
+  </main>
 
-    <script src="JS/leaderboard.js"></script>
+  <script src="./JS/leaderboard.js"></script>
 </body>
 </html>
