--- a/public/report.html
+++ b/public/report.html
@@ -4,65 +4,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Expense Report</title>
-  <style>
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-      border: 1px solid #000;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background: #f2f2f2;
-    }
-  </style>
+  <link rel="stylesheet" href="./CSS/report.css">
 </head>
 <body>
+
+  <h3>Your Expense Report</h3>
   
-
   <select id="filterSelect">
-  <option value="">--Select Report Type--</option>
-  <option value="daily">Daily</option>
-  <option value="monthly">Monthly</option>
-</select>
+    <option value="">--Select Report Type--</option>
+    <option value="daily">Daily</option>
+    <option value="monthly">Monthly</option>
+  </select>
 
-<div id="dateContainer" style="margin-top:10px;"></div>
+  <div id="dateContainer" style="margin-top:10px;"></div>
 
-<button id="generateReportBtn">Generate Report</button>
-<button id="downloadBtn">Download CSV</button>
+  <button id="generateReportBtn">Generate Report</button>
+  <button id="downloadBtn">Download CSV</button>
 
-<label for="rowsPerPage">Rows per page:</label>
-<select id="rowsPerPage">
-  <option value="10">10</option>
-  <option value="20">20</option>
-  <option value="40">40</option>
-</select>
+  <label for="rowsPerPage">Rows per page:</label>
+  <select id="rowsPerPage">
+    <option value="10">10</option>
+    <option value="20">20</option>
+    <option value="40">40</option>
+  </select>
 
-<!-- Monthly Summary -->
-<div id="monthlySummary"></div>
+  <!-- Monthly Summary -->
+  <div id="monthlySummary"></div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Amount</th>
-      <th>Description</th>
-      <th>Category</th>
-      <th>Date</th>
-    </tr>
-  </thead>
-  <tbody id="reportTableBody"></tbody>
-</table>
+  <table>
+    <thead>
+      <tr>
+        <th>Amount</th>
+        <th>Description</th>
+        <th>Category</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody id="reportTableBody"></tbody>
+  </table>
 
-<!-- Pagination controls -->
-<div>
-  <button id="prevPageBtn">Prev</button>
-  <span id="pageIndicator"></span>
-  <button id="nextPageBtn">Next</button>
-</div>
-
-
+  <!-- Pagination controls -->
+  <div>
+    <button id="prevPageBtn">Prev</button>
+    <span id="pageIndicator"></span>
+    <button id="nextPageBtn">Next</button>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="JS/report.js"></script>
