--- a/public/home.html
+++ b/public/home.html
@@ -78,7 +78,7 @@
       </div>
   </div>
 
-  
+  <button id="downloadExpences">Download Expenses</button>
   
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
