--- a/public/home.html
+++ b/public/home.html
@@ -28,13 +28,13 @@
   <!-- Add Expense Form -->
   <form onsubmit="home(event)">
       <label for="amount">Expense Amount:</label>
-      <input type="number" id="amount" name="amount">
+      <input type="number" id="amount" name="amount" required>
 
       <label for="description">Description:</label>
-      <input type="text" id="description" name="description">
+      <input type="text" id="description" name="description" required>
 
       <label for="category">Category:</label>
-      <select id="category" name="category">
+      <select id="category" name="category" required>
           <option value="food">Food</option>
           <option value="fuel">Fuel</option>
           <option value="entertainment">Entertainment</option>
