--- a/public/signup.html
+++ b/public/signup.html
@@ -11,13 +11,13 @@
 
 <form onsubmit="signup(event)">
     <label for="name">Name</label>
-    <input type="text" id="name" name="name" placeholder="Name">
+    <input type="text" id="name" name="name" placeholder="Name" required>
 
     <label for="email">Email</label>
-    <input type="email" id="email" name="email" placeholder="Email">
+    <input type="email" id="email" name="email" placeholder="Email" required>
 
     <label for="password">Password</label>
-    <input type="password" id="password"  name="password" placeholder="Password">
+    <input type="password" id="password"  name="password" placeholder="Password" required>
 
     <button>Signup</button>
 
