--- a/public/login.html
+++ b/public/login.html
@@ -11,10 +11,10 @@
 
 
     <label for="email">Email:</label>
-    <input type="text" id="email" name="email" required>
+    <input type="text" id="email" name="email" >
 
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password">
 
     <button type="submit">Login</button>
 
