--- a/public/signup.html
+++ b/public/signup.html
@@ -29,7 +29,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../JS/signup.js"></script>
+    <script src="./JS/signup.js"></script>
     
 </body>
 </html>
